operator/manifests/beiboot-gke.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: getdeck

---
apiVersion: v1
kind: Service
metadata:
  name: beiboot-admission
  namespace: getdeck
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: beiboot-operator

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: beiboot.getdeck.dev
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZDakNDQXZLZ0F3SUJBZ0lVTzJZMlJqUVdL
[...]
      V2QxcDVRNGlCUXFoZz09Ci0tLS0tRU5EIENFUlRJRklDQVRFLS0tLS0K
    service:
      name: beiboot-admission
      namespace: getdeck
      path: /validate-parameters
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate-parameters.beiboot.getdeck.dev
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - getdeck.dev
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - beiboots
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: shelf.beiboots.getdeck.dev
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZDakNDQXZLZ0F3SUJBZ0lVTzJZMlJqUVdL
[...]
      V2QxcDVRNGlCUXFoZz09Ci0tLS0tRU5EIENFUlRJRklDQVRFLS0tLS0K
    service:
      name: beiboot-admission
      namespace: getdeck
      path: /validate-shelf
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate-shelf.shelf.beiboots.getdeck.dev
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - beiboots.getdeck.dev
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - shelves
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beiboot-operator
  name: beiboot-operator
  namespace: getdeck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beiboot-operator
  template:
    metadata:
      labels:
        app: beiboot-operator
    spec:
      containers:
      - image: quay.io/getdeck/beiboot:1.4.0
        imagePullPolicy: Always
        name: beiboot
        ports:
        - containerPort: 9443
      serviceAccountName: beiboot-operator
