operator/manifests/beiboot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: getdeck

---
apiVersion: v1
kind: Service
metadata:
  name: beiboot-admission
  namespace: getdeck
spec:
  selector:
    app: beiboot-operator
  ports:
    - protocol: TCP
      port: 443
      targetPort: 9443

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: beiboot.getdeck.dev
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZDakNDQXZLZ0F3SUJBZ0lVTzJZMlJqUVdL
[...]
      V2QxcDVRNGlCUXFoZz09Ci0tLS0tRU5EIENFUlRJRklDQVRFLS0tLS0K
    service:
      name: beiboot-admission
      namespace: getdeck
      path: "/check-namespace-ready"
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: check-namespace-ready.beiboot.getdeck.dev
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - getdeck.dev
    apiVersions:
    - v1
    operations:
    - 'CREATE'
    resources:
    - beiboots
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beiboot-operator
  namespace: getdeck
  labels:
    app: beiboot-operator
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beiboot-operator
  template:
    metadata:
      labels:
        app: beiboot-operator
    spec:
      imagePullSecrets:
      serviceAccountName: beiboot-operator
      containers:
        - name: beiboot
          image: quay.io/getdeck/beiboot:dev4
          imagePullPolicy: Always
          ports:
            - containerPort: 9443
